--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,9 +7,9 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/skparagas/CS-5805-Final-Project
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/ParagasSpencer
 format:
   html:
     theme: minty
