--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,8 @@ website:
   title: "CS 5805 Final Project"
   navbar:
     right:
-      - index.qmd
+      - text: Blog
+        href: blog.qmd
       - icon: github
         href: https://github.com/skparagas/CS-5805-Final-Project
       - icon: twitter
