--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,8 +13,20 @@ website:
         href: https://twitter.com/ParagasSpencer
 format:
   html:
-    theme: minty
+    page-layout: full
+    theme: 
+      light: [minty, light.scss]
+      dark: [darkly, dark.scss]
     css: styles.css
+    grid: 
+      sidebar-width: 150px
+      body-width: 1800px
+      margin-width: 250px
 
 editor: visual
 
+execute:
+  freeze: true
+  cache: true
+  warning: false
+  echo: fenced
