--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,7 @@ format:
       body-width: 1800px
       margin-width: 250px
     code-tools: true
+    output-file: index.html
 
 editor: source
 
