--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,8 +15,8 @@ format:
   html:
     page-layout: full
     theme: 
-      light: [minty, light.scss]
-      dark: [darkly, dark.scss]
+      light: [minty]
+      dark: [darkly]
     css: styles.css
     grid: 
       sidebar-width: 150px
